IE (mostly) z-index fix

--- a/partials/_main.scss
+++ b/partials/_main.scss
@@ -8,7 +8,7 @@
   background-color: $color-4;
   font-size: $font-size-small;
   @include margin-padding(0 0 20px 0, 30px);
-  z-index: 20;
+  position: relative;
   transform: rotate(1deg);
   z-index: 20;
   & h3 {
@@ -101,18 +101,21 @@
   background-size: 196px, 40px;
   height: 445px;
   @include margin-padding(40px auto 40px, 35px 20px 20px 20px);
+  position: relative;
   transform: rotate(2deg);
   z-index: 100;
   & h3 {
     text-align: center;
     margin-bottom: 5px;
     margin-top: 7px;
+    z-index: 100;
   }
   & p {
     border-bottom: 8px solid $color-7;
     font-size: $font-size-small;
     line-height: 1.2rem;
     padding: 5px 20px 1em 20px;
+    z-index: 100;
   }
   &:hover {
     animation: hover_flutter 1s ease;
