--- a/style.css
+++ b/style.css
@@ -467,7 +467,9 @@ header h2 {
   line-height: 1.2rem;
   -webkit-transform: translateY(16px);
           transform: translateY(16px);
+  position: relative;
   width: 135px;
+  z-index: 70;
 }
 
 header h2:hover {
@@ -489,7 +491,7 @@ header h2:hover {
   header h2 {
     right: -395px;
     top: 115px;
-    z-index: 10;
+    z-index: 70;
   }
 }
 
@@ -511,8 +513,9 @@ header h2:hover {
   background-position: right -180px bottom -150px;
   font-size: 0.8em;
   background-color: #ffffff;
+  position: relative;
   width: 200px;
-  z-index: 10;
+  z-index: 70;
   -webkit-transform: translateY(15px);
           transform: translateY(15px);
 }
@@ -617,7 +620,7 @@ header h2:hover {
   font-size: 1rem;
   margin: 0 0 20px 0;
   padding: 30px;
-  z-index: 20;
+  position: relative;
   -webkit-transform: rotate(1deg);
           transform: rotate(1deg);
   z-index: 20;
@@ -754,6 +757,7 @@ header h2:hover {
   height: 445px;
   margin: 40px auto 40px;
   padding: 35px 20px 20px 20px;
+  position: relative;
   -webkit-transform: rotate(2deg);
           transform: rotate(2deg);
   z-index: 100;
@@ -763,6 +767,7 @@ header h2:hover {
   text-align: center;
   margin-bottom: 5px;
   margin-top: 7px;
+  z-index: 100;
 }
 
 .benefits p {
@@ -770,6 +775,7 @@ header h2:hover {
   font-size: 1rem;
   line-height: 1.2rem;
   padding: 5px 20px 1em 20px;
+  z-index: 100;
 }
 
 .benefits:hover {
